--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "marked": "^9.0.0",
-    "@fortawesome/fontawesome-free": "^6.4.2"
+    "tesseract.js": "^6.0.1",
+    "vue": "^3.3.4",
+    "vue-draggable-next": "^2.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
