--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .vue,.ts,.js src",
-  "type-check": "vue-tsc --noEmit"
+  "type-check": "vue-tsc --noEmit",
+  "prepare": "husky install"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
