--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint --ext .vue,.ts,.js src",
-  "type-check": "vue-tsc --noEmit",
-  "prepare": "husky install"
+    "lint-fix": "eslint --ext .vue,.ts,.js src --fix || exit 0",
+    "type-check": "vue-tsc --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
@@ -34,6 +35,7 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vue-tsc": "^2.2.8"
   }
 }
