--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ build/
 # 操作系统文件
 .DS_Store
 Thumbs.db
+
+.windsurfrules
+cline_mcp_settings.json
+*.md
+frontend/print-structure.py
+/frontend/src/assets/styles/
+/\345\205\266\344\273\226/
+/\347\273\274\345\220\210 AI\351\230\205\350\257\273\345\212\251\346\211\213\345\217\263\344\276\247\345\214\272\345\237\237\351\207\215\350\256\276\350\256\241\346\226\271\346\241\210*
