--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "axios": "^1.9.0",
     "marked": "^9.0.0",
+    "pinia": "^3.0.2",
     "tesseract.js": "^6.0.1",
     "vue": "^3.3.4",
     "vue-draggable-next": "^2.2.1"
